# vouchkit

./: .gitignore  CHANGELOG.md  CO-MAINTAINER.md  CONTRIBUTING.md  NOTICE  PROMPT.md  README.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/design/: backends.md
docs/interop/: eudi-reference-wallet-2026-07.md
examples/: demo_rp.py
src/vouchkit/: __init__.py  backends.py  openid4vp.py  sdjwt.py  testkit.py
tests/: test_openid4vp.py  test_sdjwt.py
