[project]
name = "vouchkit"
version = "0.0.1"
description = "The wallet-relying-party toolkit for personal-data services — verify EUDI wallet presentations (SD-JWT VC) in Python"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "The vouchkit authors" }]
keywords = [
    "eudi",
    "eidas",
    "wallet",
    "relying-party",
    "verifier",
    "openid4vp",
    "sd-jwt",
    "verifiable-credentials",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = ["cryptography>=42"]

[project.urls]
Repository = "https://github.com/vouchkit/vouchkit"

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vouchkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
